refactor:DO-3634:optimize imports and better implementation